deploy/traefik-ingress/traefik-deploy-sidecar-envoy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: traefik
    tier: proxy
  name: traefik-deploy
  namespace: middleoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
      tier: proxy
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"5a357b5fa6005e3d7642e92accb42383c4782e9865d5c5df193217a69bebcf46","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: traefik
        tier: proxy
    spec:
      containers:
      - args:
        - --configfile=/config/traefik.toml
        - --api
        - --loglevel=DEBUG
        - --kubernetes
        image: traefik
        name: traefik
        ports:
        - containerPort: 80
          hostPort: 80
          name: http
        - containerPort: 8080
          hostPort: 8080
          name: traefik-ui
        - containerPort: 443
          hostPort: 443
          name: https
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        volumeMounts:
        - mountPath: /config
          name: config
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - traefik
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15007
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-statsd-prom-bridge.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: gcr.io/istio-release/proxyv2:1.0.0
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources:
          requests:
            cpu: 10m
        securityContext:
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      serviceAccountName: traefik-service-account
      terminationGracePeriodSeconds: 60
      volumes:
      - configMap:
          name: traefik-conf
        name: config
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.traefik-service-account
status: {}
---
